--- a/Inventory_management_project___ETG (1).ipynb
+++ b/Inventory_management_project___ETG (1).ipynb
@@ -31,7 +31,7 @@
         "id": "5b7eca66"
       },
       "source": [
-        "# ANKIT KUMAR\n"
+        "# Pranav Kadam\n"
       ],
       "id": "5b7eca66"
     },
